refactor: stream toList로 변경